chore: test workflow
fix: fix concurrency in workflow


chore: add caching in workflow


chore: switch to npm

Switch from Yarn to NPM in order to use `npm ci`, update Docker files and CircleCI config
chore: simplify CircleCI config


fix: fix error with missing executor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,18 @@ orbs:
   node: circleci/node@3.0.0
 
 jobs:
-  install-node-example:
-    docker:
-      - image: 'cimg/base:stable'
+  run-tests:
+    executor: node/default
     steps:
       - checkout
-      - node/install:
-          install-yarn: true
-          node-version: latest
-      - run: node --version
+      - node/install-packages
+      - run: # run tests
+          name: Run Test and Coverage
+          command: |
+            npm test -- --coverage
 
 workflows:
   build-and-test:
     jobs:
-      - install-node-example
+      - run-tests
+
