--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,17 @@
 # Берем node.js v14 в качестве родительского образа
 FROM node:14
+
 # Устанавливаем рабочую директорию
 WORKDIR /app
+
 # Копируем файлы yarn.lock и package.json в рабочую директорию
-COPY package.json yarn.lock /app/
+COPY package.json package-lock.json /app/
+
 # Устанавливаем зависимости
-RUN yarn install
+RUN npm ci
+
 # Открываем порт 3000
 EXPOSE 3000
+
 # Запускаем React-приложение после запуска контейнера
-CMD ["yarn", "start"]
+CMD ["npm", "run", "start"]
