--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,61 @@
-# Автоматически определяем количество процессов
+# auto detects a good number of processes to run
 worker_processes auto;
+
+#Provides the configuration file context in which the directives that affect connection processing are specified.
 events {
-    # Устанавливаем максимальное кол-во соединений для одного рабочего процесса
+    # Sets the maximum number of simultaneous connections that can be opened by a worker process.
     worker_connections 8000;
-    # Указывем nginx, чтобы он пытался принять максимльное кол-во подключений
+    # Tells the worker to accept multiple connections at a time
     multi_accept on;
 }
 
+
 http {
-    # Указываем корректные заголовки для всех типов расширений
-    include mime.types;
-    default_type application/octet-stream;
-    # Увеличиваем производительность
-    sendfile on;
-    # Сжимаем данные
-    gzip on;
-    gzip_comp_level 6;
-    gzip_min_length 100;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    # what times to include
+    include       /etc/nginx/mime.types;
+    # what is the default one
+    default_type  application/octet-stream;
+
+    # Sets the path, format, and configuration for a buffered log write
+    log_format compression '$remote_addr - $remote_user [$time_local] '
+    '"$request" $status $upstream_addr '
+    '"$http_referer" "$http_user_agent"';
+
     server {
-        index index.html index.htm;
-        # Слушаем 80 порт
+        # listen on port 80
         listen 80;
-        # Директория из которой раздаем статику
+        # save logs here
+        access_log /var/log/nginx/access.log compression;
+
+        # where the root here
         root /usr/share/nginx/html;
-        # Сначала пытаемся обработать запрос как к файлу или директории
+        # what file to server as index
+        index index.html index.htm;
+
         location / {
+            # First attempt to serve request as file, then
+            # as directory, then fall back to redirecting to index.html
             try_files $uri $uri/ /index.html;
+        }
+
+        # Media: images, icons, video, audio, HTC
+        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+            expires 1M;
+            access_log off;
+            add_header Cache-Control "public";
+        }
+
+        # Javascript and CSS files
+        location ~* \.(?:css|js)$ {
+            try_files $uri =404;
+            expires 1y;
+            access_log off;
+            add_header Cache-Control "public";
+        }
+
+        # Any route containing a file extension (e.g. /devicesfile.js)
+        location ~ ^.+\..+$ {
+            try_files $uri =404;
         }
     }
 }
